# satelit-import

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
_tests/common/: mod.rs
_tests/db_tests/: schedules.rs
config/: db_tests.toml  default.toml  integration-tests.toml  rpc_tests.toml  test.toml
config/tests/: db-queued-jobs.toml  db-schedules.toml  db-tasks.toml  rpc_tests.toml
docker/: README.md
docker/app/: Dockerfile  README.md
docker/app/scripts/: build-project.sh  entry.sh
docker/tests/: Dockerfile  app.Dockerfile  docker-compose.yaml  nginx.Dockerfile  postgres.Dockerfile
docker/tests/app/: prepare-db.sh  provision.sh  run-tests.sh
docker/tests/nginx/: nginx.conf
docker/tests/postgres/: extensions.sh
docker/tests/support/: provision.sh
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2019-04-27-083905_initial/: down.sql  up.sql
migrations/2019-08-26-143645_initial/: down.sql  up.sql
scripts/: clippy.sh  fmt.sh  prepare-db.sh
src/: anidb.rs  api.rs  block.rs  db.rs  import.rs  lib.rs  main.rs  proto.rs  proto_ext.rs  rpc.rs  settings.rs  store.rs  worker.rs
src/anidb/: build.rs  entity.rs  importer.rs  parser.rs
src/anidb/importer/: download.rs  extract.rs  import.rs  test_utils.rs
src/anidb/parser/: build.rs  entity.rs
src/api/: import.rs  scrape.rs  scraper.rs  task.rs
src/db/: convert.rs  entity.rs  queued_jobs.rs  queued_tasks.rs  scheduled_tasks.rs  schedules.rs  schema.rs  tasks.rs
src/db/entity/: ext.rs
src/proto/: data.rs  ext.rs  import.rs  scheduler.rs  scraper.rs  scraping.rs  uuid.rs
src/proto/scheduler/: intent.rs
src/proto/scrape/: anime.rs  mod.rs  task.rs
src/proto/scraper/: anime.rs  task.rs
src/rpc/: import.rs  task.rs
src/rpc/task/: update.rs
src/settings/: template.rs
src/worker/: dump.rs
src/worker/dump/: copy.rs  download.rs  extract.rs  import.rs  respond.rs  test_utils.rs
tests/: db.rs  import.rs  rpc.rs
tests/common/: mod.rs
tests/db_tests/: mod.rs  queued_jobs.rs  schedules.rs  tasks.rs
tests/dump/: mod.rs
tests/rpc_tests/: import.rs  mod.rs  task.rs
tests_broken/: db.rs  rpc.rs
tests_broken/db_tests/: mod.rs  tasks.rs
tests_broken/rpc_tests/: mod.rs  task.rs
