[package]
name = "satelit-import"
version = "0.1.0"
authors = ["Igor Nikitin <rabbitinspace@icloud.com>"]
edition = "2018"

[dependencies]
config = "0.10.1"
tinytemplate = "1.0.3"
tempfile = "3.1.0"
log = { version = "0.4.8", features = ["std"] }
lazy_static = "1.4.0"

async-compression = { version = "0.3.1", features = ["futures-bufread", "gzip"] }
chrono = "0.4.10"
quick-xml = "0.18.1"
rust-s3 = "0.19.0"

diesel = { version = "1.4.3", features = ["postgres", "r2d2", "chrono"] }
serde = { version = "1.0.104", features = ["derive"] }

futures = "0.3.4"
tokio = { version = "0.2.13", features = ["fs", "io-util", "macros"] }
tokio-util = { version = "0.3.0", features = ["compat"] }
tracing = "0.1.13"
tracing-futures = "0.2.3"
tracing-subscriber = "0.2.3"

tonic = "0.1.1"
prost = "0.6.1"
bytes = "0.5.4"

[dev-dependencies]
toml = "0.5.6"
